Coloca favicon, ajusta imagem de logo, tela de loading, e imagem do pokémon.

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1em;
 }
 
 .image-container {
@@ -21,10 +20,10 @@
 }
 
 .image-container img {
-  width: 200px;
+  width: 250px;
   height: auto;
   position: absolute;
-  top: 40px;
+  top: 50%;
   left: 50%;
   transform: translateX(-50%);
   z-index: 29;
