--- a/src/components/Banner/styles.css
+++ b/src/components/Banner/styles.css
@@ -1,9 +1,15 @@
 .banner {
-    width: 100%;
+    width: 100vw;
+    height: 100svh;
     background-image: url(../../assets/pokemon-doodle.png);
     background-position: center;
+    background-size: cover;
     text-align: center;
     grid-column: 1/4;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 
 }
 
@@ -12,5 +18,5 @@
 }
 
 .logo {
-    max-width: 50%;
+    max-width: 100%;
 }
